Fix popup dialog problem due to wrong z-Index settings

--- a/java/com.sap.sailing.gwt.ui/RaceBoard.css
+++ b/java/com.sap.sailing.gwt.ui/RaceBoard.css
@@ -137,8 +137,8 @@ input.magnifier {
 	width: 100%;
 	position: fixed;
 	bottom: 0;
-	height: 151px;
-	z-index: 1000;
+	height: 140px;
+	z-index: 9;
 }
 
 .timeLineInnerPanel {
@@ -162,7 +162,7 @@ input.magnifier {
 	bottom: 0;
 	background: url(images/footer_shadow.png) left bottom repeat-x;
 	width: 100%;
-	z-index: 2000;
+	z-index: 10;
 }
 
 .breadcrumbPanel {
@@ -294,6 +294,6 @@ input.magnifier {
 .timePanel-controls-timeDelay {
 }
 
-.gwt-SliderBar-shell {
-	width: 95%;
+.gwt-DialogBox {
+	z-index: 20;
 }
